--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="ru">
 
 <head>
   <meta charset="utf-8">
@@ -8,8 +8,7 @@
 </head>
 
 <body class="d-flex flex-column min-vh-100">
-  <div class="modal fade show" id="modal" tabindex="-1" role="dialog" aria-labelledby="modal" aria-modal="true"
-    style="display: block;">
+  <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modal" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -25,12 +24,14 @@
       </div>
     </div>
   </div>
+
   <main class="flex-grow-1">
     <section class="container-fluid bg-dark p-5">
       <div class="row">
         <div class="col-md-10 col-lg-8 mx-auto text-white">
           <h1 class="display-3 mb-0">RSS агрегатор</h1>
           <p class="lead">Начните читать RSS сегодня! Это легко, это красиво.</p>
+
           <form action="" class="rss-form text-body">
             <div class="row">
               <div class="col">
@@ -40,40 +41,28 @@
                   <label for="url-input">Ссылка RSS</label>
                 </div>
               </div>
-              <div class="col-auto">
-                <button type="submit" aria-label="add" class="h-100 btn btn-lg btn-primary px-sm-5">Добавить</button>
-              </div>
+              <div class="col-auto"><button type="submit" aria-label="add"
+                  class="h-100 btn btn-lg btn-primary px-sm-5">Добавить</button></div>
             </div>
           </form>
-          <p class="mt-2 mb-0 text-muted">Пример: https://ru.hexlet.io/lessons.rss</p>
+          <p class="mt-2 mb-0 text-secondary">Пример: https://lorem-rss.hexlet.app/feed</p>
           <p class="feedback m-0 position-absolute small text-danger"></p>
         </div>
       </div>
     </section>
+
     <section class="container-fluid container-xxl p-5">
       <div class="row">
-        <div class="col-md-10 col-lg-8 order-1 mx-auto posts">
-          <div class="card border-0">
-            <div class="card-body">
-              <h2 class="card-title h4">Посты</h2>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-10 col-lg-4 mx-auto order-0 order-lg-1 feeds">
-          <div class="card border-0">
-            <div class="card-body">
-              <h2 class="card-title h4">Фиды</h2>
-            </div>
-          </div>
-        </div>
+        <div class="col-md-10 col-lg-8 order-1 mx-auto posts"></div>
+        <div class="col-md-10 col-lg-4 mx-auto order-0 order-lg-1 feeds"></div>
       </div>
     </section>
   </main>
-  <footer class="footer broder-top py-3 mt-5 bg-light">
+
+  <footer class="footer border-top py-3 mt-5 bg-light">
     <div class="container-xl">
       <div class="text-center">
-        created by
-        <a href="https://ru.hexlet.io/professions/frontend/projects/11" target="_blank">Hexlet</a>
+        created by <a href="https://ru.hexlet.io/professions/frontend/projects/11" target="_blank">Hexlet</a>
       </div>
     </div>
   </footer>
