--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                   class="h-100 btn btn-lg btn-primary px-sm-5">Добавить</button></div>
             </div>
           </form>
-          <p class="mt-2 mb-0 text-secondary">Пример: https://lorem-rss.hexlet.app/feed</p>
+          <p class="mt-2 mb-0 text-secondary">Пример: https://lorem-rss.hexlet.app/feed,
+            https://ru.hexlet.io/lessons.rss</p>
           <p class="feedback m-0 position-absolute small text-danger"></p>
         </div>
       </div>
